[package]
name = "rustinance"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
argon2 = "0.5.3"
env_logger = "0.11.8"
once_cell = "1.21.3"
password-hash = "0.5.0"
reqwest = "0.12.23"
serde = "1.0.225"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = "1.18.1"
